tests/compile-fail/reserved/try_match_no_arms2.rs
fn main() {
    let _ = try_match::try_match!(Some(42));
}
